package kamaji;

message KamajiMessage {
	enum ACTION {
		STATUS_UPDATE = 1;
		ASSIGN = 2;
		QUERY = 3;
	}
	enum ENTITY {
		NODE 	= 11;
		JOB 	= 12;
		TASK    = 13;
		COMMAND = 14;
	}
  required ACTION action = 1 [default=STATUS_UPDATE];
  required ENTITY entity = 2 [default=NODE];
  optional string id = 3;
  repeated NodeItem messageitems = 4;
  repeated JobItem jobitems = 5;
  repeated TaskItem taskitems = 6;
  repeated CommandItem commanditems = 7;
  optional group StatusUpdate = 8 {
  	required int32 destination = 9;
  }

  optional group NodeStats = 10 {
    required string hostname = 11;
  }
  optional group CommandLog = 12 {
    required string logline = 13;
  }
  optional group Command = 14 {
  	required string ID = 15;
  }
  message NodeItem {
    required string id = 16;
    optional int32 state = 17;
  }
  message JobItem {
    required string name = 18;
    required string id = 19;
    optional int32 state = 20;
  }
  message TaskItem {
    required string name = 21;
    required string id = 22;
    optional int32 state = 23;
  }
  message CommandItem {
    required string name = 24;
    required string id = 25;
    optional int32 state = 26;
  }
}